[package]
name = "match_any"
version = "0.0.1"
authors = ["DarkEld3r <stanislav.tkach@gmail.com>"]
repository = "https://github.com/DarkEld3r/match_any.git"
homepage = "https://github.com/DarkEld3r/match_any.git"
license = "MIT"
readme = "README.md"
description = "Match like macro for std::any::Any"
keywords = ["match_any", "any_match", "match", "any", "macro"]

[lib]
name = "match_any"
